<resources>
    <string name="app_name">Seahawk Yardsale</string>

    <string name="create_account">New user? Click here!</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="newUser">Account Creation</string>
    <string name="newpassword">Confirm Password</string>
    <string name="create">CREATE</string>
    <string name="logout">LOG OUT</string>
    <string name="loginscreentext">You have successfully logged in!</string>
    <string name="login">LOG IN</string>


</resources>
